src/components/sticker/sticker.module.css
.sticker {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 200px;
  cursor: pointer;
  transition: width 0.15s, filter 0,15s;
}

@media screen and (min-width: 90em) {
  .sticker {
    width: 400px;
  }
}

@media screen and (min-width: 60em) and (max-width: 90em) {
  .sticker {
    width: 300px;
  }
}

@media screen and (min-width: 30em) and (max-width: 60em) {
  .sticker {
    width: 200px;
  }
}

.sticker .image {
  width: 100%;
  transition: transform 0.15s;
}

.sticker-link {
  filter: drop-shadow(4px 0px 0 white) 
          drop-shadow(-4px 0px 0 white)
          drop-shadow(0px 4px 0 white)
          drop-shadow(0px -4px 0 white)
          drop-shadow(0px 0px 1px rgb(0, 0, 0, 0.2));
}

.sticker-link:hover,
.sticker-link:focus {
  filter: drop-shadow(4px 0px 0 white) 
          drop-shadow(-4px 0px 0 white)
          drop-shadow(0px 4px 0 white)
          drop-shadow(0px -4px 0 white)
          drop-shadow(0px 0px 4px rgb(0, 0, 0, 0.2));
}

.sticker-link:focus {
  outline: none;
}

.sticker-link:hover .image,
.sticker-link:focus .image {
  transform: scale(1.05);
  transform-origin: center center;
}

